Fixed top-nav on mobile

--- a/public_html/sass/main.scss
+++ b/public_html/sass/main.scss
@@ -117,7 +117,7 @@ li:before {
 ul#nav {
 	list-style: none;
 	text-align: center;
-	margin-left: 30px;
+	margin-left: 0;
 	padding: 0;
 	display: inline-block;
     line-height: 0px;
@@ -409,6 +409,10 @@ h1 span.sub-h {
 		height: 60px;
 		width: auto;
 		max-width: 100%;
+	}
+
+	ul#nav {
+		margin-left: 30px;
 	}
 }
 
